...
                        }
                    }
                    if (state.selectedSection == LibrarySection.PLAYLISTS && state.selectedContent == null) {
                        IconButton(onClick = {
                            haptics.performHapticFeedback(HapticFeedbackType.TextHandleMove)
                            onCreatePlaylist()
                        }, modifier = Modifier.testTag("create-playlist-button")) {
                            Icon(Icons.Default.Add, stringResource(R.string.create_playlist))
                        }
                    }
                    IconButton(onClick = onRefresh, modifier = Modifier.testTag("refresh-button")) {
                        Icon(Icons.Default.Refresh, stringResource(R.string.refresh))
                    }
...
